Assignment.jj
options{
  lookahead = 2;
  STATIC = false;
}

PARSER_BEGIN(Assignment)
  import java.util.*;
  public class Assignment{
    public static ArrayList<String> functionCalls = new ArrayList<String>();
    public static ArrayList<String> functionNames = new ArrayList<String>();

    public static void main(String args []) throws Exception {
      try {
        new Assignment(System.in).Program();
        System.out.println("Syntax is okay: PASS");
      } catch (Exception e) {
        System.out.println("Syntax error detected: FAIL");
        System.err.println(e.getMessage());
      }     
    }
  }

PARSER_END(Assignment)

//Lexical Specification

//Space
TOKEN: { < SPACE: " " > }
//End of line tokens
TOKEN: { < EOL: "\n" | "\r" | "\r\n" > }
//End of file
// TOKEN: { <EOF: "\0">}
//Arithmetic operators
TOKEN: { < ADD: "+" > | < MUL: "*" > }
//Parenthesis
TOKEN: { < LPAREN: "(" > | < RPAREN: ")" > }
//Curly braces
TOKEN: { < LBRACE: "{" > | < RBRACE: "}" > }
//Semi-colon
TOKEN: { < SCOLON: ";" > }
//Function definition - reserved word
TOKEN: { < DEF: "DEF" > }
//Main function - reserved word
// TOKEN: { < MAIN: "MAIN" > }
//Function names
TOKEN: { < MAIN: "MAIN" > | < FUNC: (["A"-"Z"])+ > }
//Parameter names
TOKEN: { < PARAM: (["a"-"z"])+ > }
//Numeric literals
TOKEN: { < NUM: (["0"-"9"])+ > }
//Begining of a function definition
//Use of define to eliminate need of lookahead
TOKEN: { < DEFINE: <DEF> <SPACE> > }

//Lexical Specification

void Definition(): {} {
  try {
    <DEFINE>
  } catch (ParseException e) { //Catch error thrown for wrong expression
    //extract line number from Exception
    String temp = e.getMessage().substring(
      e.getMessage().indexOf("line")+5, e.getMessage().indexOf(",")
    );
    int lineNumber = Integer.parseInt(temp);

    //throw new excpetion with a custom message
    throw new ParseException(lineNumber+"\nEach Function must start with (DEF)");
  }
}

//(1) - [CORRECT]   //(2) - [CORRECT]   //(3) - [CORRECT]
//(4) - [CORRECT]   //(5) - [CORRECT]   //(6) - [CORRECT]
//(7) - [INCORRECT] //(8) - [INCORRECT]   //(9) - [CORRECT]
//(10) - [CORRECT]  //(11) - [CORRECT]  //(12) - [CORRECT]

//TODO: (7) - Make sure associated parameters are used in function bodies # hashmap
//TODO: (8) - Make sure function calls refer to defined functions in the same file #
//TODO: (11) - Handle error reporting for duplicate functions

//Program consists of one main function and a series of function definitions in any order
//Program -> Function* Main Function*
void Program(): {} {
  (Definition() Function())* 
  
  Definition()
  try {
    Main()
  } catch (ParseException e) { //Catch error thrown for missing main function
    int lineNumber = 0;

    throw new ParseException(lineNumber+"\nMissing Main Function");
  }

  (Definition() Function())*  
  <EOF>  
}

//Main -> MAIN FunctionBody
void Main(): {} {
  <MAIN> <SPACE> FunctionBody()
}

//Function -> FUNC PARAM FunctionBody
void Function():
{ String functionName = "";
  Token t;} 
{
  try {
    t = <FUNC> 
    { //Check if a function with the same name has already been defined
      functionName = t.image;
      if (functionNames.contains(functionName)) {
        System.err.println(t.beginLine+"\nFunction " + functionName + " already defined");
        System.exit(0);
      } else {
        functionNames.add(functionName);
      }
    } 
    <SPACE> <PARAM> <SPACE> FunctionBody()
  } catch (ParseException e) { //Catch error thrown for missing function name
    //extract line number from Exception
    String temp = e.getMessage().substring(
      e.getMessage().indexOf("line")+5, e.getMessage().indexOf(",")
    );
    int lineNumber = Integer.parseInt(temp);

    //throw new excpetion with a custom message
    throw new ParseException(lineNumber+"\nIncorrect Function Format");
  }
}

//FunctionBody -> LBRACE EXPR RBRACE SCOLON EOL
void FunctionBody(): {} {
  <LBRACE> <SPACE> 
  
  try {
    Expression()
  } catch (ParseException e) { //Catch error thrown for wrong expression
    //extract line number from Exception
    String tem = e.getMessage().substring(
      e.getMessage().indexOf("line")+5, e.getMessage().indexOf(",")
    );
    int lineNumber = Integer.parseInt(tem);

    throw new ParseException(lineNumber+"Incorrect Expression Format");
  }  
  
  <SPACE> <RBRACE> <SPACE> <SCOLON> 

  try {
    <EOL>
  } catch (ParseException e) { //Catch error thrown for wrong line terminator
    String tem = e.getMessage().substring(
      e.getMessage().indexOf("line")+5, e.getMessage().indexOf(",")
    );
    
    int lineNumber = Integer.parseInt(tem);

    //throw new excpetion with a custom message
    throw new ParseException(lineNumber+"Invalid line terminator");
  }
}

//Function_Call -> FUNC LPAREN EXPR RPAREN
void Function_Call(): {} {
  <FUNC> <LPAREN> Expression() <RPAREN>
}

//EXPR -> TERM ADD TERM | TERM
void Expression(): {} {
  Term() ( <ADD> Term() )*
}

//TERM -> FACTOR MUL FACTOR | FACTOR
void Term(): {} {
  Factor() ( <MUL> Factor() )*
}

//FACTOR -> NUM | Function | Parameter
//add check to make sure function calls refer to defined functions in the same file
void Factor(): {} {
  Function_Call() | <PARAM> | <NUM>
}
